create customers operation
