# src/main/kotlin/kpavlov/bank/api/CustomersApi.kt
@@ -1,10 +1,12 @@
 package kpavlov.bank.api
 
+import kpavlov.bank.domain.Customer
 import kpavlov.bank.domain.CustomerDetails
 import kpavlov.bank.domain.CustomerId
 import java.util.concurrent.CompletionStage
 
 interface CustomersApi {
 
-    fun getCustomerDetails(customerId: CustomerId): CompletionStage<CustomerDetails>
+    fun createCustomer(customer: Customer): CompletionStage<CustomerDetails>
+    suspend fun getCustomerDetails(customerId: CustomerId): CompletionStage<CustomerDetails>
 }
